Fixed Spacing between tabs

--- a/marketpage/marketpage.css
+++ b/marketpage/marketpage.css
@@ -56,7 +56,7 @@ h1{
     border: none;
     outline: none;
     cursor: pointer;
-    padding: 30px 74.5px;
+    padding: 30px 73.65px;
     transition: 0.3s;
     font-size: 17px;
     border: 1px solid #ccc;
